--- a/res/values-b+sr+Latn/strings.xml
+++ b/res/values-b+sr+Latn/strings.xml
@@ -27,8 +27,7 @@
     <string name="printer_door_open" msgid="2446302931916940874">"Vrata su otvorena"</string>
     <string name="printer_jammed" msgid="5104099859384749499">"Papir je zaglavljen"</string>
     <string name="printer_offline" msgid="9196864753298645066">"Oflajn"</string>
-    <!-- no translation found for printer_bad_certificate (1366180387095466268) -->
-    <skip />
+    <string name="printer_bad_certificate" msgid="1366180387095466268">"Neispravan sertifikat"</string>
     <string name="printer_not_encrypted" msgid="1913051469275483673">"Nije šifrovano"</string>
     <string name="printer_check" msgid="6428369671197132828">"Proverite štampač"</string>
     <string name="waiting_to_send" msgid="2022115199902822180">"Čeka se na slanje"</string>
@@ -60,13 +59,9 @@
     <string name="forget" msgid="892068061425802502">"Zaboravi"</string>
     <string name="connects_via_wifi_direct" msgid="652300632780158437">"Povezuje se preko Wi-Fi Direct-a"</string>
     <string name="connects_via_network" msgid="5990041581556733898">"Povezuje se preko trenutne mreže pomoću IP adrese <xliff:g id="IP_ADDRESS">%1$s</xliff:g>"</string>
-    <!-- no translation found for security (2279008326210305401) -->
-    <skip />
-    <!-- no translation found for certificate_update_request (1314796413107139475) -->
-    <skip />
+    <string name="security" msgid="2279008326210305401">"Bezbednost"</string>
+    <string name="certificate_update_request" msgid="1314796413107139475">"Ovaj štampač pruža novi bezbednosni sertifikat ili se neki drugi uređaj lažno predstavlja kao on. Želite li da prihvatite novi sertifikat?"</string>
     <string name="not_encrypted_request" msgid="4871472176807381642">"Ovaj štampač više ne prihvata šifrovane zadatke. Želite li da nastavite sa štampanjem?"</string>
-    <!-- no translation found for accept (4426153292469698134) -->
-    <skip />
-    <!-- no translation found for reject (24751635160440693) -->
-    <skip />
+    <string name="accept" msgid="4426153292469698134">"Prihvati"</string>
+    <string name="reject" msgid="24751635160440693">"Odbij"</string>
 </resources>
