--- a/res/values-bs/strings.xml
+++ b/res/values-bs/strings.xml
@@ -27,8 +27,7 @@
     <string name="printer_door_open" msgid="2446302931916940874">"Poklopac je otvoren"</string>
     <string name="printer_jammed" msgid="5104099859384749499">"Zaglavljeno"</string>
     <string name="printer_offline" msgid="9196864753298645066">"Van mreže"</string>
-    <!-- no translation found for printer_bad_certificate (1366180387095466268) -->
-    <skip />
+    <string name="printer_bad_certificate" msgid="1366180387095466268">"Pogrešna potvrda"</string>
     <string name="printer_not_encrypted" msgid="1913051469275483673">"Nije šifrirano"</string>
     <string name="printer_check" msgid="6428369671197132828">"Provjerite štampač"</string>
     <string name="waiting_to_send" msgid="2022115199902822180">"Čeka se slanje"</string>
@@ -60,13 +59,9 @@
     <string name="forget" msgid="892068061425802502">"Zaboravi"</string>
     <string name="connects_via_wifi_direct" msgid="652300632780158437">"Povezivanje putem opcije WiFi Direct"</string>
     <string name="connects_via_network" msgid="5990041581556733898">"Povezivanje putem trenutne mreže na <xliff:g id="IP_ADDRESS">%1$s</xliff:g>"</string>
-    <!-- no translation found for security (2279008326210305401) -->
-    <skip />
-    <!-- no translation found for certificate_update_request (1314796413107139475) -->
-    <skip />
+    <string name="security" msgid="2279008326210305401">"Sigurnost"</string>
+    <string name="certificate_update_request" msgid="1314796413107139475">"Ovaj štampač je pružio novu potvrdu sigurnosti ili ga drugi uređaj imitira. Prihvatiti novu potvrdu?"</string>
     <string name="not_encrypted_request" msgid="4871472176807381642">"Ovaj štampač više ne prihvata šifrirane zadatke. Nastaviti štampati?"</string>
-    <!-- no translation found for accept (4426153292469698134) -->
-    <skip />
-    <!-- no translation found for reject (24751635160440693) -->
-    <skip />
+    <string name="accept" msgid="4426153292469698134">"Prihvati"</string>
+    <string name="reject" msgid="24751635160440693">"Odbij"</string>
 </resources>
