--- a/res/values-es-rUS/strings.xml
+++ b/res/values-es-rUS/strings.xml
@@ -27,8 +27,7 @@
     <string name="printer_door_open" msgid="2446302931916940874">"Puerta abierta"</string>
     <string name="printer_jammed" msgid="5104099859384749499">"Papel atascado"</string>
     <string name="printer_offline" msgid="9196864753298645066">"Sin conexión"</string>
-    <!-- no translation found for printer_bad_certificate (1366180387095466268) -->
-    <skip />
+    <string name="printer_bad_certificate" msgid="1366180387095466268">"Certificado incorrecto"</string>
     <string name="printer_not_encrypted" msgid="1913051469275483673">"Sin encriptar"</string>
     <string name="printer_check" msgid="6428369671197132828">"Verificar impresora"</string>
     <string name="waiting_to_send" msgid="2022115199902822180">"Esperando para enviar"</string>
@@ -60,13 +59,9 @@
     <string name="forget" msgid="892068061425802502">"Olvidar"</string>
     <string name="connects_via_wifi_direct" msgid="652300632780158437">"Se conecta mediante Wi-Fi directo"</string>
     <string name="connects_via_network" msgid="5990041581556733898">"Se conecta mediante la red actual a <xliff:g id="IP_ADDRESS">%1$s</xliff:g>"</string>
-    <!-- no translation found for security (2279008326210305401) -->
-    <skip />
-    <!-- no translation found for certificate_update_request (1314796413107139475) -->
-    <skip />
+    <string name="security" msgid="2279008326210305401">"Seguridad"</string>
+    <string name="certificate_update_request" msgid="1314796413107139475">"Esta impresora emitió un nuevo certificado de seguridad, o bien está suplantándola otro dispositivo. ¿Quieres aceptar el nuevo certificado?"</string>
     <string name="not_encrypted_request" msgid="4871472176807381642">"Esta impresora ya no acepta tareas encriptadas. ¿Quieres continuar con la impresión?"</string>
-    <!-- no translation found for accept (4426153292469698134) -->
-    <skip />
-    <!-- no translation found for reject (24751635160440693) -->
-    <skip />
+    <string name="accept" msgid="4426153292469698134">"Aceptar"</string>
+    <string name="reject" msgid="24751635160440693">"Rechazar"</string>
 </resources>
