--- a/res/values-fr-rCA/strings.xml
+++ b/res/values-fr-rCA/strings.xml
@@ -27,8 +27,7 @@
     <string name="printer_door_open" msgid="2446302931916940874">"Porte ouverte"</string>
     <string name="printer_jammed" msgid="5104099859384749499">"Bourrage"</string>
     <string name="printer_offline" msgid="9196864753298645066">"Hors ligne"</string>
-    <!-- no translation found for printer_bad_certificate (1366180387095466268) -->
-    <skip />
+    <string name="printer_bad_certificate" msgid="1366180387095466268">"Certificat non fiable"</string>
     <string name="printer_not_encrypted" msgid="1913051469275483673">"Non chiffrée"</string>
     <string name="printer_check" msgid="6428369671197132828">"Vérifiez l\'imprimante"</string>
     <string name="waiting_to_send" msgid="2022115199902822180">"En attente d\'envoi"</string>
@@ -60,13 +59,9 @@
     <string name="forget" msgid="892068061425802502">"Oublier"</string>
     <string name="connects_via_wifi_direct" msgid="652300632780158437">"Se connecte par Wi-Fi direct"</string>
     <string name="connects_via_network" msgid="5990041581556733898">"Se connecte à l\'aide du réseau actuel, avec l\'adresse <xliff:g id="IP_ADDRESS">%1$s</xliff:g>"</string>
-    <!-- no translation found for security (2279008326210305401) -->
-    <skip />
-    <!-- no translation found for certificate_update_request (1314796413107139475) -->
-    <skip />
+    <string name="security" msgid="2279008326210305401">"Sécurité"</string>
+    <string name="certificate_update_request" msgid="1314796413107139475">"Cette imprimante a fourni un nouveau certificat de sécurité, ou bien un autre appareil tente d\'usurper son identité. Accepter le nouveau certificat?"</string>
     <string name="not_encrypted_request" msgid="4871472176807381642">"Cette imprimante n\'accepte plus les tâches chiffrées. Continuer l\'impression?"</string>
-    <!-- no translation found for accept (4426153292469698134) -->
-    <skip />
-    <!-- no translation found for reject (24751635160440693) -->
-    <skip />
+    <string name="accept" msgid="4426153292469698134">"Accepter"</string>
+    <string name="reject" msgid="24751635160440693">"Refuser"</string>
 </resources>
