--- a/res/values-gu/strings.xml
+++ b/res/values-gu/strings.xml
@@ -27,8 +27,7 @@
     <string name="printer_door_open" msgid="2446302931916940874">"ખુલ્લો દરવાજો"</string>
     <string name="printer_jammed" msgid="5104099859384749499">"જામ થઇ ગયું છે"</string>
     <string name="printer_offline" msgid="9196864753298645066">"ઑફલાઇન"</string>
-    <!-- no translation found for printer_bad_certificate (1366180387095466268) -->
-    <skip />
+    <string name="printer_bad_certificate" msgid="1366180387095466268">"ખોટું પ્રમાણપત્ર"</string>
     <string name="printer_not_encrypted" msgid="1913051469275483673">"એન્ક્રિપ્ટ કરેલું નથી"</string>
     <string name="printer_check" msgid="6428369671197132828">"પ્રિન્ટર તપાસો"</string>
     <string name="waiting_to_send" msgid="2022115199902822180">"મોકલવાની રાહ જોઇ રહ્યાં છીએ"</string>
@@ -60,13 +59,9 @@
     <string name="forget" msgid="892068061425802502">"ભૂલી જાઓ"</string>
     <string name="connects_via_wifi_direct" msgid="652300632780158437">"Wi-Fi Direct મારફતે કનેક્ટ થશે"</string>
     <string name="connects_via_network" msgid="5990041581556733898">"હાલના નેટવર્ક મારફતે <xliff:g id="IP_ADDRESS">%1$s</xliff:g> પર કનેક્ટ થશે"</string>
-    <!-- no translation found for security (2279008326210305401) -->
-    <skip />
-    <!-- no translation found for certificate_update_request (1314796413107139475) -->
-    <skip />
+    <string name="security" msgid="2279008326210305401">"સુરક્ષા"</string>
+    <string name="certificate_update_request" msgid="1314796413107139475">"આ પ્રિન્ટરે નવું સુરક્ષા પ્રમાણપત્ર રજૂ કર્યું છે અથવા કોઈ અન્ય ડિવાઇસ ખોટી ઓળખ રજૂ કરી રહ્યું છે. શું નવા પ્રમાણપત્રનો સ્વીકાર કરીએ?"</string>
     <string name="not_encrypted_request" msgid="4871472176807381642">"આ પ્રિન્ટર હવે કોઈ એન્ક્રિપ્ટ કરેલા કાર્યનો સ્વીકાર કરતું નથી. પ્રિન્ટ કરવાનું ચાલુ રાખીએ?"</string>
-    <!-- no translation found for accept (4426153292469698134) -->
-    <skip />
-    <!-- no translation found for reject (24751635160440693) -->
-    <skip />
+    <string name="accept" msgid="4426153292469698134">"સ્વીકારો"</string>
+    <string name="reject" msgid="24751635160440693">"નકારો"</string>
 </resources>
