--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -27,8 +27,7 @@
     <string name="printer_door_open" msgid="2446302931916940874">"दरवाज़ा खुला है"</string>
     <string name="printer_jammed" msgid="5104099859384749499">"जाम है"</string>
     <string name="printer_offline" msgid="9196864753298645066">"ऑफ़लाइन"</string>
-    <!-- no translation found for printer_bad_certificate (1366180387095466268) -->
-    <skip />
+    <string name="printer_bad_certificate" msgid="1366180387095466268">"गलत प्रमाणपत्र"</string>
     <string name="printer_not_encrypted" msgid="1913051469275483673">"सुरक्षित नहीं किया गया है"</string>
     <string name="printer_check" msgid="6428369671197132828">"प्रिंटर जाँचें"</string>
     <string name="waiting_to_send" msgid="2022115199902822180">"भेजने की प्रतीक्षा की जा रही है"</string>
@@ -60,13 +59,9 @@
     <string name="forget" msgid="892068061425802502">"भूल जाएं"</string>
     <string name="connects_via_wifi_direct" msgid="652300632780158437">"Wi-Fi Direct के ज़रिए कनेक्ट किया जाता है"</string>
     <string name="connects_via_network" msgid="5990041581556733898">"<xliff:g id="IP_ADDRESS">%1$s</xliff:g> पर मौजूदा नेटवर्क के ज़रिए कनेक्ट किया जाता है"</string>
-    <!-- no translation found for security (2279008326210305401) -->
-    <skip />
-    <!-- no translation found for certificate_update_request (1314796413107139475) -->
-    <skip />
+    <string name="security" msgid="2279008326210305401">"सुरक्षा"</string>
+    <string name="certificate_update_request" msgid="1314796413107139475">"इस प्रिंटर ने एक नया सुरक्षा प्रमाणपत्र दिया या फिर कोई दूसरा डिवाइस इसके नाम से काम कर रहा है. नया प्रमाणपत्र स्वीकार करें?"</string>
     <string name="not_encrypted_request" msgid="4871472176807381642">"यह प्रिंटर अब सुरक्षित किए गए काम स्वीकार नहीं करता है प्रिंट करना चाहते हैं?"</string>
-    <!-- no translation found for accept (4426153292469698134) -->
-    <skip />
-    <!-- no translation found for reject (24751635160440693) -->
-    <skip />
+    <string name="accept" msgid="4426153292469698134">"स्वीकार करें"</string>
+    <string name="reject" msgid="24751635160440693">"अस्‍वीकार करें"</string>
 </resources>
