--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -27,8 +27,7 @@
     <string name="printer_door_open" msgid="2446302931916940874">"Nyitott ajtó"</string>
     <string name="printer_jammed" msgid="5104099859384749499">"Elakadt"</string>
     <string name="printer_offline" msgid="9196864753298645066">"Offline"</string>
-    <!-- no translation found for printer_bad_certificate (1366180387095466268) -->
-    <skip />
+    <string name="printer_bad_certificate" msgid="1366180387095466268">"Helytelen tanúsítvány"</string>
     <string name="printer_not_encrypted" msgid="1913051469275483673">"Nem titkosított"</string>
     <string name="printer_check" msgid="6428369671197132828">"Nyomtató ellenőrzése"</string>
     <string name="waiting_to_send" msgid="2022115199902822180">"Várakozás a küldésre"</string>
@@ -60,13 +59,9 @@
     <string name="forget" msgid="892068061425802502">"Elfelejtés"</string>
     <string name="connects_via_wifi_direct" msgid="652300632780158437">"Wi-Fi Directen keresztül csatlakozik"</string>
     <string name="connects_via_network" msgid="5990041581556733898">"A következő címen csatlakozik az aktuális hálózaton keresztül: <xliff:g id="IP_ADDRESS">%1$s</xliff:g>"</string>
-    <!-- no translation found for security (2279008326210305401) -->
-    <skip />
-    <!-- no translation found for certificate_update_request (1314796413107139475) -->
-    <skip />
+    <string name="security" msgid="2279008326210305401">"Biztonság"</string>
+    <string name="certificate_update_request" msgid="1314796413107139475">"A nyomtató új biztonsági tanúsítványt adott meg, vagy egy másik eszköz a nyomtatónak álcázza magát. Elfogadja az új tanúsítványt?"</string>
     <string name="not_encrypted_request" msgid="4871472176807381642">"Ez a nyomtató már nem fogad titkosított feladatokat. Folytatja a nyomtatást?"</string>
-    <!-- no translation found for accept (4426153292469698134) -->
-    <skip />
-    <!-- no translation found for reject (24751635160440693) -->
-    <skip />
+    <string name="accept" msgid="4426153292469698134">"Elfogadás"</string>
+    <string name="reject" msgid="24751635160440693">"Elutasítás"</string>
 </resources>
