--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -27,8 +27,7 @@
     <string name="printer_door_open" msgid="2446302931916940874">"Sportello aperto"</string>
     <string name="printer_jammed" msgid="5104099859384749499">"Bloccata"</string>
     <string name="printer_offline" msgid="9196864753298645066">"Offline"</string>
-    <!-- no translation found for printer_bad_certificate (1366180387095466268) -->
-    <skip />
+    <string name="printer_bad_certificate" msgid="1366180387095466268">"Certificato non valido"</string>
     <string name="printer_not_encrypted" msgid="1913051469275483673">"Non criptata"</string>
     <string name="printer_check" msgid="6428369671197132828">"Controlla la stampante"</string>
     <string name="waiting_to_send" msgid="2022115199902822180">"In attesa di invio"</string>
@@ -60,13 +59,9 @@
     <string name="forget" msgid="892068061425802502">"Elimina"</string>
     <string name="connects_via_wifi_direct" msgid="652300632780158437">"Si connette tramite Wi-Fi Direct"</string>
     <string name="connects_via_network" msgid="5990041581556733898">"Si connette tramite la rete attuale all\'indirizzo <xliff:g id="IP_ADDRESS">%1$s</xliff:g>"</string>
-    <!-- no translation found for security (2279008326210305401) -->
-    <skip />
-    <!-- no translation found for certificate_update_request (1314796413107139475) -->
-    <skip />
+    <string name="security" msgid="2279008326210305401">"Sicurezza"</string>
+    <string name="certificate_update_request" msgid="1314796413107139475">"La stampante ha fornito un nuovo certificato di sicurezza oppure un altro dispositivo viene identificato come tale. Accettare il nuovo certificato?"</string>
     <string name="not_encrypted_request" msgid="4871472176807381642">"Questa stampante non accetta più processi criptati. Vuoi continuare a stampare?"</string>
-    <!-- no translation found for accept (4426153292469698134) -->
-    <skip />
-    <!-- no translation found for reject (24751635160440693) -->
-    <skip />
+    <string name="accept" msgid="4426153292469698134">"Accetta"</string>
+    <string name="reject" msgid="24751635160440693">"Rifiuta"</string>
 </resources>
