--- a/res/values-lo/strings.xml
+++ b/res/values-lo/strings.xml
@@ -27,8 +27,7 @@
     <string name="printer_door_open" msgid="2446302931916940874">"ປະຕູເປີດຢູ່"</string>
     <string name="printer_jammed" msgid="5104099859384749499">"ເຈ້ຍຕິດ"</string>
     <string name="printer_offline" msgid="9196864753298645066">"ອອບລາຍ"</string>
-    <!-- no translation found for printer_bad_certificate (1366180387095466268) -->
-    <skip />
+    <string name="printer_bad_certificate" msgid="1366180387095466268">"ໃບຮັບຮອງບໍ່ຖືກຕ້ອງ"</string>
     <string name="printer_not_encrypted" msgid="1913051469275483673">"ບໍ່ໄດ້ເຂົ້າລະຫັດ"</string>
     <string name="printer_check" msgid="6428369671197132828">"ກວດສອບເຄື່ອງພິມ"</string>
     <string name="waiting_to_send" msgid="2022115199902822180">"ກຳລັງລໍຖ້າສົ່ງ"</string>
@@ -60,13 +59,9 @@
     <string name="forget" msgid="892068061425802502">"ລືມ"</string>
     <string name="connects_via_wifi_direct" msgid="652300632780158437">"ເຊື່ອມຕໍ່ຜ່ານ Wi-Fi Direct"</string>
     <string name="connects_via_network" msgid="5990041581556733898">"ເຊື່ອມຕໍ່ຜ່ານເຄືອຂ່າຍປັດຈຸບັນທີ່ <xliff:g id="IP_ADDRESS">%1$s</xliff:g>"</string>
-    <!-- no translation found for security (2279008326210305401) -->
-    <skip />
-    <!-- no translation found for certificate_update_request (1314796413107139475) -->
-    <skip />
+    <string name="security" msgid="2279008326210305401">"ຄວາມປອດໄພ"</string>
+    <string name="certificate_update_request" msgid="1314796413107139475">"ເຄື່ອງພິມນີ້ໃຫ້ໃບຮັບຮອງຄວາມປອດໄພໃໝ່ ຫຼື ອຸປະກອນອື່ນກຳລັງປອມເປັນມັນຢູ່. ຍອມຮັບໃບຮັບຮອງໃໝ່ບໍ?"</string>
     <string name="not_encrypted_request" msgid="4871472176807381642">"ເຄື່ອງພິມນີ້ບໍ່ຮັບໜ້າວຽກທີ່ເຂົ້າລະຫັດໄວ້. ສືບຕໍ່ການພິມບໍ?"</string>
-    <!-- no translation found for accept (4426153292469698134) -->
-    <skip />
-    <!-- no translation found for reject (24751635160440693) -->
-    <skip />
+    <string name="accept" msgid="4426153292469698134">"ຍອມຮັບ"</string>
+    <string name="reject" msgid="24751635160440693">"ປະຕິເສດ"</string>
 </resources>
