--- a/res/values-lv/strings.xml
+++ b/res/values-lv/strings.xml
@@ -27,8 +27,7 @@
     <string name="printer_door_open" msgid="2446302931916940874">"Atvērtas piekļuves durvis"</string>
     <string name="printer_jammed" msgid="5104099859384749499">"Iestrēdzis papīrs"</string>
     <string name="printer_offline" msgid="9196864753298645066">"Bezsaistē"</string>
-    <!-- no translation found for printer_bad_certificate (1366180387095466268) -->
-    <skip />
+    <string name="printer_bad_certificate" msgid="1366180387095466268">"Nederīgs sertifikāts"</string>
     <string name="printer_not_encrypted" msgid="1913051469275483673">"Nešifrēts"</string>
     <string name="printer_check" msgid="6428369671197132828">"Pārbaudīt printeri"</string>
     <string name="waiting_to_send" msgid="2022115199902822180">"Gaida sūtīšanu"</string>
@@ -60,13 +59,9 @@
     <string name="forget" msgid="892068061425802502">"Aizmirst"</string>
     <string name="connects_via_wifi_direct" msgid="652300632780158437">"Notiek savienojuma izveide, izmantojot Wi-Fi Direct"</string>
     <string name="connects_via_network" msgid="5990041581556733898">"Notiek savienojuma izveide, izmantojot pašreizējo tīklu ar šādu IP adresi: <xliff:g id="IP_ADDRESS">%1$s</xliff:g>"</string>
-    <!-- no translation found for security (2279008326210305401) -->
-    <skip />
-    <!-- no translation found for certificate_update_request (1314796413107139475) -->
-    <skip />
+    <string name="security" msgid="2279008326210305401">"Drošība"</string>
+    <string name="certificate_update_request" msgid="1314796413107139475">"Šim printerim ir jauns drošības sertifikāts, vai arī cita ierīce uzdodas par to. Vai apstiprināt jauno sertifikātu?"</string>
     <string name="not_encrypted_request" msgid="4871472176807381642">"Šis printeris vairs nepieņem šifrētus uzdevumus. Vai turpināt drukāšanu?"</string>
-    <!-- no translation found for accept (4426153292469698134) -->
-    <skip />
-    <!-- no translation found for reject (24751635160440693) -->
-    <skip />
+    <string name="accept" msgid="4426153292469698134">"Apstiprināt"</string>
+    <string name="reject" msgid="24751635160440693">"Noraidīt"</string>
 </resources>
