--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -27,8 +27,7 @@
     <string name="printer_door_open" msgid="2446302931916940874">"Klep geopend"</string>
     <string name="printer_jammed" msgid="5104099859384749499">"Vastgelopen"</string>
     <string name="printer_offline" msgid="9196864753298645066">"Offline"</string>
-    <!-- no translation found for printer_bad_certificate (1366180387095466268) -->
-    <skip />
+    <string name="printer_bad_certificate" msgid="1366180387095466268">"Verkeerd certificaat"</string>
     <string name="printer_not_encrypted" msgid="1913051469275483673">"Niet versleuteld"</string>
     <string name="printer_check" msgid="6428369671197132828">"Printer controleren"</string>
     <string name="waiting_to_send" msgid="2022115199902822180">"Wachten om te verzenden"</string>
@@ -60,13 +59,9 @@
     <string name="forget" msgid="892068061425802502">"Vergeten"</string>
     <string name="connects_via_wifi_direct" msgid="652300632780158437">"Maakt verbinding via Wifi Direct"</string>
     <string name="connects_via_network" msgid="5990041581556733898">"Maakt verbinding via huidige netwerk op <xliff:g id="IP_ADDRESS">%1$s</xliff:g>"</string>
-    <!-- no translation found for security (2279008326210305401) -->
-    <skip />
-    <!-- no translation found for certificate_update_request (1314796413107139475) -->
-    <skip />
+    <string name="security" msgid="2279008326210305401">"Beveiliging"</string>
+    <string name="certificate_update_request" msgid="1314796413107139475">"Deze printer biedt een nieuw beveiligingscertificaat aan, of een ander apparaat imiteert deze printer. Wil je het nieuwe certificaat accepteren?"</string>
     <string name="not_encrypted_request" msgid="4871472176807381642">"Deze printer accepteert geen versleutelde taken meer. Doorgaan met afdrukken?"</string>
-    <!-- no translation found for accept (4426153292469698134) -->
-    <skip />
-    <!-- no translation found for reject (24751635160440693) -->
-    <skip />
+    <string name="accept" msgid="4426153292469698134">"Accepteren"</string>
+    <string name="reject" msgid="24751635160440693">"Weigeren"</string>
 </resources>
