--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -27,8 +27,7 @@
     <string name="printer_door_open" msgid="2446302931916940874">"Otvorené dvierka"</string>
     <string name="printer_jammed" msgid="5104099859384749499">"Zablokované"</string>
     <string name="printer_offline" msgid="9196864753298645066">"Offline"</string>
-    <!-- no translation found for printer_bad_certificate (1366180387095466268) -->
-    <skip />
+    <string name="printer_bad_certificate" msgid="1366180387095466268">"Nesprávny certifikát"</string>
     <string name="printer_not_encrypted" msgid="1913051469275483673">"Nešifrované"</string>
     <string name="printer_check" msgid="6428369671197132828">"Skontrolovať tlačiareň"</string>
     <string name="waiting_to_send" msgid="2022115199902822180">"Čaká sa na odoslanie"</string>
@@ -60,13 +59,9 @@
     <string name="forget" msgid="892068061425802502">"Odstrániť"</string>
     <string name="connects_via_wifi_direct" msgid="652300632780158437">"Pripája sa prostredníctvom rozhrania Wi-Fi Direct"</string>
     <string name="connects_via_network" msgid="5990041581556733898">"Pripája sa prostredníctvom aktuálnej siete na adrese IP – <xliff:g id="IP_ADDRESS">%1$s</xliff:g>"</string>
-    <!-- no translation found for security (2279008326210305401) -->
-    <skip />
-    <!-- no translation found for certificate_update_request (1314796413107139475) -->
-    <skip />
+    <string name="security" msgid="2279008326210305401">"Zabezpečenie"</string>
+    <string name="certificate_update_request" msgid="1314796413107139475">"Táto tlačiareň poskytla nový bezpečnostný certifikát alebo ju napodobňuje iné zariadenie. Chcete nový certifikát prijať?"</string>
     <string name="not_encrypted_request" msgid="4871472176807381642">"Tlačiareň už neprijíma šifrované úlohy. Chcete pokračovať v tlačení?"</string>
-    <!-- no translation found for accept (4426153292469698134) -->
-    <skip />
-    <!-- no translation found for reject (24751635160440693) -->
-    <skip />
+    <string name="accept" msgid="4426153292469698134">"Prijať"</string>
+    <string name="reject" msgid="24751635160440693">"Odmietnuť"</string>
 </resources>
